# nostr-vpn

./: .dockerignore  .env.mobile.example  .env.release.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.bench-boringtun  Dockerfile.bench-wireguard-go  Dockerfile.e2e  Dockerfile.mobile-wireguard-exit-e2e  Dockerfile.paid-exit-e2e  Justfile  Makefile  README.md  docker-compose.bench-boringtun.yml  docker-compose.bench-wireguard-go.yml  docker-compose.e2e.yml  docker-compose.exit-node-e2e.yml  docker-compose.wireguard-exit-e2e.yml  instructions.md  package-lock.json  package.json  s9pk.mk  tsconfig.json  zapstore.yaml
crates/nostr-vpn-app-core/: Cargo.toml
crates/nostr-vpn-app-core/examples/: desktop_roster_e2e_fixture.rs  lan_pair_probe.rs  standard_join_approval_e2e.rs  webvm_native_fips_e2e.rs
crates/nostr-vpn-app-core/src/: actions.rs  c_abi.rs  exchange_rate.rs  ffi.rs  fips_nostr_relay.rs  headless_fips.rs  invite.rs  join_approval.rs  join_approval_transport.rs  join_request_link.rs  lan_pairing.rs  lib.rs  mobile_tunnel.rs  native_state.rs  state.rs  update_policy.rs
crates/nostr-vpn-app-core/src/ffi/: helpers.rs  paid_exit_actions.rs  paid_exit_json.rs  paid_exit_state.rs  paid_exit_text.rs  paid_exit_wallet_helpers.rs  paid_exit_wallet_runtime.rs  runtime_actions.rs  runtime_config.rs  runtime_lifecycle.rs  runtime_network.rs  runtime_paid_exit.rs  runtime_service.rs  tests_core.rs  tests_exit_dns.rs  tests_network.rs  tests_network_join_actions.rs  tests_service.rs  tests_service_macos.rs  tests_service_paid_exit_buy.rs
crates/nostr-vpn-app-core/src/mobile_tunnel/: android_tun.rs  config.rs  endpoint_config.rs  endpoint_control.rs  magic_dns.rs  native_tun.rs  runtime.rs  runtime_state.rs  tests_config.rs  tests_core.rs  tests_identity.rs  tests_paid_route.rs  tests_runtime.rs  tests_runtime_desktop_mobile_join.rs  tests_runtime_future_presence.rs  tests_runtime_join_request.rs  tests_runtime_manual_join.rs
crates/nostr-vpn-cli/: Cargo.toml
crates/nostr-vpn-cli/src/: config_bootstrap.rs  control_pubsub_runtime.rs  daemon_runtime.rs  diagnostics.rs  exit_dns_resolver.rs  exit_dns_runtime.rs  exit_dns_runtime_tests.rs  fips_host_tunnel.rs  fips_private_mesh.rs  fips_tcp_records.rs  join_request_ipc.rs  lib.rs  linux_network.rs  macos_network.rs  macos_service.rs  main.rs  network_signaling.rs  pairing_qr.rs  pipeline_profile.rs  platform_routing.rs  recent_peers_store.rs  secure_dns_runtime.rs  service_management.rs  session_runtime.rs  updater.rs  webvm_guest.rs  wg_upstream_runtime.rs  windows_network.rs  windows_tunnel.rs  wireguard_exit.rs
crates/nostr-vpn-cli/src/control_pubsub_runtime/: event_store.rs  outbox.rs  reputation.rs  tests.rs
crates/nostr-vpn-cli/src/daemon_runtime/: control_files.rs  macos_cleanup.rs  permissions_and_ping.rs  process_scan.rs  runtime_files.rs
crates/nostr-vpn-cli/src/diagnostics/: port_mapping.rs  probes.rs
crates/nostr-vpn-cli/src/fips_private_mesh/: control_frame.rs  direct_endpoint_lanes.rs  direct_endpoint_queue.rs  endpoint_config.rs  fips_pubsub_relay_adapter.rs  join_approval_ack.rs  join_approval_runtime.rs  linux_interface_state.rs  linux_vnet_tun.rs  linux_vnet_tun_tests.rs  mesh_bind.rs  mtu_and_policy.rs  peer_status_and_events.rs  runtime_control.rs  runtime_receive.rs  runtime_send.rs  runtime_status.rs  tests_config.rs  tests_core.rs  tests_runtime.rs  tests_status.rs  tests_status_endpoint_data.rs  tests_tun_pipeline.rs  time.rs  tun_pipeline.rs  tunnel_config.rs  tunnel_runtime_linux.rs  tunnel_runtime_unix_core.rs  tunnel_runtime_unsupported.rs  tunnel_runtime_windows.rs  types_and_mtu.rs  unix_tun.rs  unix_tun_debug.rs  unix_tun_workers.rs  unix_tun_write.rs  webvm_dns.rs  webvm_host_network.rs  windows_runtime_type.rs  windows_tun.rs
crates/nostr-vpn-cli/src/main/: cli_args.rs  command_dispatch.rs  daemon_commands.rs  doctor_and_parsing.rs  lan_pairing.rs  paid_exit.rs  roster_sync.rs  runtime_endpoint_helpers.rs  runtime_helpers.rs  runtime_roster.rs  status_types.rs  wg_self_test.rs
crates/nostr-vpn-cli/src/platform_routing/: forwarding_and_setup.rs  linux_routes.rs  macos_routes_and_tests.rs
crates/nostr-vpn-cli/src/service_management/: commands.rs  helpers.rs  linux.rs  windows.rs
crates/nostr-vpn-cli/src/session_runtime/: connect_vpn.rs  daemon_state.rs  daemon_vpn.rs  fips_status_helpers.rs  tests.rs
crates/nostr-vpn-cli/src/tests/: cli_smoke.rs  config_cache.rs  daemon_control.rs  support.rs  (+7 more)
crates/nostr-vpn-cli/tests/: paid_exit_cli.rs  status_cli.rs
crates/nostr-vpn-core/: Cargo.toml
crates/nostr-vpn-core/src/: config.rs  config_defaults.rs  config_secrets.rs  control_pubsub.rs  data_plane.rs  diagnostics.rs  exit_dns.rs  exit_flow_filter.rs  fips_control.rs  fips_control_tcp.rs  fips_control_tests.rs  fips_discovery.rs  fips_mesh.rs  fips_pubsub_relay.rs  identity_bridge.rs  join_delivery.rs  join_pubsub.rs  join_requests.rs  join_roster_persistence.rs  lan_pairing.rs  lib.rs  magic_dns.rs  network_roster.rs  packet_checksums.rs  paid_route_accounting.rs  paid_route_store.rs  paid_routes.rs  recent_peers.rs  secure_dns.rs  signed_rosters.rs  updater.rs  wg_upstream.rs
crates/nostr-vpn-core/tests/: config_tests.rs  control_pubsub_tests.rs  identity_bridge_tests.rs  join_approval_tests.rs  magic_dns_tests.rs  recent_peer_tests.rs
crates/nostr-vpn-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/nostr-vpn-sim/: Cargo.toml  README.md
crates/nostr-vpn-sim/src/: lib.rs  main.rs  reputation.rs
crates/nostr-vpn-web/: Cargo.toml
crates/nostr-vpn-web/src/: invite.rs  main.rs  ui_types.rs
linux/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
linux/resources/: nostr-vpn.desktop
linux/scripts/: dev-entrypoint.sh  e2e-smoke.sh
linux/src/: deep_link.rs  main.rs  qr.rs  qr_scan.rs  tray.rs  updater.rs
linux/src/main/: devices_page.rs  exit_nodes_page.rs  paid_routes_page.rs  runtime_events.rs  saved_networks.rs  settings_page.rs  share_page.rs  shell.rs  startup.rs  tests_and_selection.rs  utilities.rs  widgets.rs
(+382 files in other folders)
