[workspace]
members = [
  "crates/nostr-vpn-app-core",
  "crates/nostr-vpn-app-core/uniffi-bindgen",
  "crates/nostr-vpn-core",
  "crates/nostr-vpn-cli",
  "crates/nostr-vpn-web",
  "crates/nostr-vpn-wintun",
]
exclude = ["linux"]
resolver = "2"

[workspace.package]
version = "4.0.4"
edition = "2024"
license = "MIT"
authors = ["sirius"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
boringtun = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
fips-endpoint = { git = "https://github.com/mmalmi/fips.git", rev = "06bb40fe0fb3d80325498774d8ae93f0bbcb9d97" }
futures = "0.3"
hex = "0.4"
hickory-proto = "0.25"
hostname = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }
nostr-sdk = { version = "0.35", default-features = false, features = ["nip44"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
