[workspace]
members = [
  "crates/nostr-vpn-app-core",
  "crates/nostr-vpn-app-core/uniffi-bindgen",
  "crates/nostr-vpn-core",
  "crates/nostr-vpn-cli",
  "crates/nostr-vpn-web",
  "crates/nostr-vpn-wintun",
]
exclude = ["linux"]
resolver = "2"

[workspace.package]
version = "4.0.72"
edition = "2024"
license = "MIT"
authors = ["Nostr VPN contributors"]
repository = "https://github.com/mmalmi/nostr-vpn"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
boringtun = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
fips-endpoint = "0.3.30"
fips-core = "0.3.54"
futures = "0.3"
hashtree-blossom = { version = "0.2.55", default-features = false, features = ["store"] }
hashtree-core = "0.2.55"
hashtree-resolver = { version = "0.2.56", features = ["nostr"] }
hashtree-updater = "0.2.56"
hex = "0.4"
hickory-proto = "0.26"
hostname = "0.4"
netdev = "0.43"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }
nostr = { version = "0.35", features = ["nip44"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44"] }
nostr-vpn-core = { version = "4.0.40", path = "crates/nostr-vpn-core" }
nostr-vpn-wintun = { version = "4.0.40", path = "crates/nostr-vpn-wintun" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
