[package]
name = "nostr-vpn-app-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native app state and action contract for Nostr VPN"
repository.workspace = true
publish = false

[lib]
name = "nostr_vpn_app_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
fips-endpoint.workspace = true
netdev.workspace = true
nostr-sdk.workspace = true
nostr-vpn-core.workspace = true
qrcode = { version = "0.14", default-features = false }
rqrr = "0.7"
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uniffi.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "allow"
