[package]
name = "nvpn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI and daemon for Nostr VPN private mesh networks"
repository.workspace = true
readme = "README.md"

[features]
default = ["paid-exit"]
fips-external-pubsub = []
paid-exit = [
  "dep:cashu",
  "dep:cashu-service",
  "nostr-vpn-core/paid-exit",
]

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
base64.workspace = true
clap.workspace = true
dirs.workspace = true
fips-core.workspace = true
fips-endpoint.workspace = true
hickory-proto.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
socket2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
nostr-sdk.workspace = true
nostr-pubsub.workspace = true
nostr-pubsub-fips.workspace = true
nostr-pubsub-social-graph.workspace = true
nostr-social-memory.workspace = true
cashu-service = { workspace = true, optional = true, features = [
  "wallet",
  "spilman-wallet-http",
  "spilman-configurable-host-reqwest",
] }
cashu = { workspace = true, optional = true }

nostr-vpn-core = { workspace = true, features = ["updater", "secure-dns"] }
crab_nat = "0.7"
igd-next = { version = "0.16", features = ["aio_tokio"] }
netdev.workspace = true
reqwest.workspace = true
qrcode = { version = "0.14", default-features = false }

[target.'cfg(unix)'.dependencies]
boringtun = { workspace = true, features = ["device"] }

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
boringtun.workspace = true
nostr-vpn-wintun.workspace = true
wintun = "0.5.1"
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Console",
] }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
mimalloc = "0.1"

[[bin]]
name = "nvpn"
path = "src/main.rs"

[[test]]
name = "paid_exit_cli"
path = "tests/paid_exit_cli.rs"
required-features = ["paid-exit"]

[dev-dependencies]
async-trait.workspace = true
futures-util = "0.3"
nostr-sdk.workspace = true
nostr-social-graph.workspace = true
rand.workspace = true
tokio-tungstenite = "0.26.2"
