[package]
name = "nostr-vpn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Nostr VPN configuration, diagnostics, MagicDNS, NAT, and WireGuard runtime code"
repository.workspace = true
readme = "README.md"

[features]
default = ["paid-exit"]
paid-exit = ["dep:cashu-service"]
updater = [
  "dep:hashtree-updater",
  "hashtree-updater/secure-nostr-blossom",
]
secure-dns = ["dep:reqwest"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cashu-service = { workspace = true, optional = true, features = ["spilman"] }
# `device` feature pulls in `boringtun::device::tun::TunSocket` (POSIX
# only — uses kqueue/epoll), so leave it off in the default dep set
# and let target-specific overrides below opt back in.
boringtun = { workspace = true }
fips-core.workspace = true
fips-tcp.workspace = true
fips-tcp-endpoint.workspace = true
nostr-sdk.workspace = true
nostr-identity.workspace = true
nostr-pubsub.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
hickory-proto.workspace = true
hmac.workspace = true
hostname.workspace = true
hashtree-updater = { workspace = true, optional = true }
netdev.workspace = true
socket2.workspace = true
reqwest = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "2"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework-sys = "2"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"
keyring-core = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
] }

[dev-dependencies]
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
