[package]
name = "nostr-vpn-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Web UI server for Nostr VPN"
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
dirs.workspace = true
nostr-sdk.workspace = true
qrcode = { version = "0.14", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["fs"] }

nostr-vpn-core.workspace = true
