[package]
name = "nostr-vpn-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "nostr-vpn-gui"

[lib]
name = "nostr_vpn_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
anyhow.workspace = true
base64.workspace = true
boringtun = { version = "0.7", default-features = false }
dirs.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
nostr-sdk.workspace = true
tauri = { version = "2.6", features = ["tray-icon", "image-png", "tracing"] }
tauri-plugin-deep-link = "2"
tauri-plugin-hashtree-updater = "0.2"

nostr-vpn-core = { path = "../../nostr-vpn-core" }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
runas = "1.2"
